--- a/WebThuvien/Views/Admin/Index.cshtml
+++ b/WebThuvien/Views/Admin/Index.cshtml
@@ -435,7 +435,7 @@
         </div>
 
         <div class="footer-wrap pd-20 mb-20 card-box">
-            DeskApp - Bootstrap 4 Admin Template By <a href="https://github.com/dropways" target="_blank">Ankit Hingarajiya</a>
+            Thư viện số hóa - <a href="/" target="_blank">Ban cơ yếu chính phủ</a>
         </div>
     </div>
 </div>
