--- a/WebThuvien/Views/Admin/Sach.cshtml
+++ b/WebThuvien/Views/Admin/Sach.cshtml
@@ -1,116 +1,70 @@
 ﻿
 @{
-    ViewBag.Title = "Tài liệu thư viện - Trang " + ViewBag.countPage;
+    ViewBag.Title = "Tài liệu thư viện";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <div class="main-container">
     <div class="xs-pd-20-10 pd-ltr-20">
-        <div class="title pb-20">
-            <h2 class="h3 mb-0">Danh mục sách thư viện</h2>
+        <div class="card-box pb-10">
+            <div class="h5 pd-20 mb-0">Danh sách các cuốn sách trong thư viện</div>
+            <table class="data-table table nowrap">
+                <thead>
+                    <tr>
+                        <th class="table-plus">STT</th>
+                        <th>Mã sách</th>
+                        <th>Tên sách</th>
+                        <th>Tác giả</th>
+                        <th>Hình ảnh sách</th>
+                        <th class="datatable-nosort">Công cụ</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @{ int STT = 0;}
+                    @foreach (var item in @ViewBag.Sach)
+                    {
+                        STT = STT + 1;
+                        <tr>
+                            <td class="table-plus">
+                                @STT
+                            </td>
+                            <td>@item.MASACH</td>
+                            <td>@item.TENSACH</td>
+                            <td>@item.TACGIA.TENTACGIA</td>
+                            <td>
+                                <div class="name-avatar d-flex align-items-center">
+                                    <div class="avatar mr-2 flex-shrink-0">
+                                        <img src="~/Content/ClientContent/images/Books/@item.HINHANH" class="border-radius-100 shadow" width="60" height="60" alt="hình ảnh">
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="table-actions">
+                                    <a href="/Admin/XemChiTietSach?MaSach=@item.MASACH" data-color="#265ed7"><i class="icon-copy dw dw-edit2"></i></a>
+                                    <a href="/Admin/Xoasach?MaSach=@item.MASACH" data-color="#e95959"><i class="icon-copy dw dw-delete-3"></i></a>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                    
+
+                </tbody>
+            </table>
         </div>
-       
-        <div class="row pb-10">
-            <form>
-                <div class="form-group row">
-                    <label class="col-sm-12 col-md-2 col-form-label">Text</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input class="form-control" type="text" placeholder="Johnny Brown">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-12 col-md-2 col-form-label">Search</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input class="form-control" placeholder="Search Here" type="search">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-12 col-md-2 col-form-label">Email</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input class="form-control" value="bootstrap@example.com" type="email">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-12 col-md-2 col-form-label">URL</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input class="form-control" value="https://getbootstrap.com" type="url">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-12 col-md-2 col-form-label">Telephone</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input class="form-control" value="1-(111)-111-1111" type="tel">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-12 col-md-2 col-form-label">Password</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input class="form-control" value="password" type="password">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-12 col-md-2 col-form-label">Number</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input class="form-control" value="100" type="number">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="example-datetime-local-input" class="col-sm-12 col-md-2 col-form-label">Date and time</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input class="form-control datetimepicker" placeholder="Choose Date anf time" type="text">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-12 col-md-2 col-form-label">Date</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input class="form-control date-picker" placeholder="Select Date" type="text">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-12 col-md-2 col-form-label">Month</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input class="form-control month-picker" placeholder="Select Month" type="text">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-12 col-md-2 col-form-label">Time</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input class="form-control time-picker td-input" placeholder="Select time" type="text" readonly="">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-12 col-md-2 col-form-label">Select</label>
-                    <div class="col-sm-12 col-md-10">
-                        <select class="custom-select col-12">
-                            <option selected="">Choose...</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-12 col-md-2 col-form-label">Color</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input class="form-control" value="#563d7c" type="color">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-12 col-md-2 col-form-label">Input Range</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input class="form-control" value="50" type="range">
-                    </div>
-                </div>
-            </form>
-        </div>
-          
+        
         
         
 
         
 
         <div class="footer-wrap pd-20 mb-20 card-box">
-            DeskApp - Bootstrap 4 Admin Template By <a href="https://github.com/dropways" target="_blank">Ankit Hingarajiya</a>
+            Thư viện số hóa -  <a href="/" target="_blank">Ban cơ yếu chính phủ</a>
         </div>
     </div>
 </div>
+@{ ViewBag.Error = TempData["Error"] as string; }
+<script>
+    var error = '@ViewBag.Error';
+
+
+</script>
