--- a/WebThuvien/Views/Admin/Index.cshtml
+++ b/WebThuvien/Views/Admin/Index.cshtml
@@ -16,7 +16,7 @@
                     <div class="d-flex flex-wrap">
                         <div class="widget-data">
                             <div class="weight-700 font-24 text-dark">75</div>
-                            <div class="font-14 text-secondary weight-500">Appointment</div>
+                            <div class="font-14 text-secondary weight-500">Sách</div>
                         </div>
                         <div class="widget-icon">
                             <div class="icon" data-color="#00eccf"><i class="icon-copy dw dw-calendar1"></i></div>
@@ -29,7 +29,7 @@
                     <div class="d-flex flex-wrap">
                         <div class="widget-data">
                             <div class="weight-700 font-24 text-dark">124,551</div>
-                            <div class="font-14 text-secondary weight-500">Total Patient</div>
+                            <div class="font-14 text-secondary weight-500">Bạn đọc</div>
                         </div>
                         <div class="widget-icon">
                             <div class="icon" data-color="#ff5b5b"><span class="icon-copy ti-heart"></span></div>
@@ -42,7 +42,7 @@
                     <div class="d-flex flex-wrap">
                         <div class="widget-data">
                             <div class="weight-700 font-24 text-dark">400+</div>
-                            <div class="font-14 text-secondary weight-500">Total Doctor</div>
+                            <div class="font-14 text-secondary weight-500">Lượt truy cập tuần</div>
                         </div>
                         <div class="widget-icon">
                             <div class="icon"><i class="icon-copy fa fa-stethoscope" aria-hidden="true"></i></div>
@@ -54,8 +54,8 @@
                 <div class="card-box height-100-p widget-style3">
                     <div class="d-flex flex-wrap">
                         <div class="widget-data">
-                            <div class="weight-700 font-24 text-dark">$50,000</div>
-                            <div class="font-14 text-secondary weight-500">Earning</div>
+                            <div class="weight-700 font-24 text-dark">50,000</div>
+                            <div class="font-14 text-secondary weight-500">Lượt quá hạn</div>
                         </div>
                         <div class="widget-icon">
                             <div class="icon" data-color="#09cc06"><i class="icon-copy fa fa-money" aria-hidden="true"></i></div>
@@ -69,13 +69,13 @@
             <div class="col-md-12 mb-20">
                 <div class="card-box height-100-p pd-20">
                     <div class="d-flex flex-wrap justify-content-between align-items-center pb-0 pb-md-3">
-                        <div class="h5 mb-md-0">Hospital Activities</div>
+                        <div class="h5 mb-md-0">Thống kê mượn trả</div>
                         <div class="form-group mb-md-0">
                             <select class="form-control form-control-sm selectpicker">
-                                <option value="">Last Week</option>
-                                <option value="">Last Month</option>
-                                <option value="">Last 6 Month</option>
-                                <option value="">Last 1 year</option>
+                                <option value="">Tuần trước</option>
+                                <option value="">Tháng trước</option>
+                                <option value="">6 tháng trước</option>
+                                <option value="">1 năm trước</option>
                             </select>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
             <div class="col-lg-4 col-md-6 mb-20">
                 <div class="card-box height-100-p pd-20 min-height-200px">
                     <div class="d-flex justify-content-between pb-10">
-                        <div class="h5 mb-0">Top Doctors</div>
+                        <div class="h5 mb-0">Vừa truy cập</div>
                         <div class="dropdown">
                             <a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle" data-color="#1b3133" href="#" role="button" data-toggle="dropdown">
                                 <i class="dw dw-more"></i>
